--- a/www/view/home.html
+++ b/www/view/home.html
@@ -5,6 +5,19 @@
 	  	</ion-nav-buttons>
   	</ion-nav-bar>
 	<ion-content class="has-header">
-		<p><a href="#/app/busca">Alguma coisa</a></p>
+		<div class="card">
+			<div class="item item-divider" >
+				<button class="button button-small button-light" ><i class="ion-chevron-left"></i></button>
+    			<p style="display: inline-block; text-align: center;">BIBLIOTECA</p>
+    			<button class="button button-small button-light"><i class="ion-chevron-right"></i></button>
+  			</div>
+			<div class="item item-text-wrap">
+				IMAGEM DA BIBLIOTECA
+		  	</div>
+		  	<div class="item item-divider">
+		  	<p>HORÁRIO</p>
+		  	<p>ABERTA/FECHADA</p>
+		  	</div>
+		</div>
 	</ion-content>
 </ion-view>
