--- a/www/css/style.css
+++ b/www/css/style.css
@@ -2,5 +2,27 @@
 .sideMenu a{
 	text-decoration: none;
 	color: black;
-	margin-left: 5%;
+	margin-left: 5%; 
+}
+
+body {
+    cursor: url('http://ionicframework.com/img/finger.png'), auto;
+}
+
+.header .col {
+    background-color:lightgrey;
+}
+
+.col {
+    border: solid 1px grey;
+    border-bottom-style: none;
+    border-right-style: none;
+}
+
+.col:last-child {
+    border-right: solid 1px grey;
+}
+
+.row:last-child .col {
+    border-bottom: solid 1px grey;
 }
