--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -24,7 +24,7 @@
         <ion-item menu-close>
           Guia de Codificação
         </ion-item>
-        <ion-item menu-close>
+        <ion-item menu-close href="#/app/livrosAlugados">
           Livros Alugados
         </ion-item>
         <ion-item menu-close>
