--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -25,7 +25,7 @@
           Guia de Codificação
         </ion-item>
         <ion-item menu-close href="#/app/livrosAlugados">
-          Livros Alugados
+          <i class="ion-calendar"></i>Livros Alugados
         </ion-item>
         <ion-item menu-close>
           <i class="ion-android-star-outline"></i> Favoritos
