--- a/www/view/livrosAlugados.html
+++ b/www/view/livrosAlugados.html
@@ -3,10 +3,34 @@
 		<ion-nav-buttons side="left">
 	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	  	</ion-nav-buttons>
+	  	<ion-nav-buttons side="right">
+	  		<a href="#/app/addLivrosAlugados">
+	    		<button class="button button-icon icon ion-plus-round"></button>
+	    	</a>	
+	  	</ion-nav-buttons>
 	</ion-nav-bar>
 	<ion-content class="has-header">
-		<div class="aviso" ng-show="livros.length == 0">
+		<div class="aviso" ng-show="livros.length == 0" scroll="false">
 			<h2>Nenhum livro alugado.</h2>
+		</div>
+
+		<div class="tableLivros" ng-show="livros.length > 0">
+			<table name="tableLivros">
+				<thead>
+					<tr>
+						<th>Livro</th>
+						<th>Código</th>
+						<th>Data de devolução</th>
+					</tr>
+				</thead>
+				<tbody>
+					<tr ng-repeat="liv in livros">
+						<td>{{liv.nome_livro}}</td>
+						<td>{{liv.codigo_livro}}</td>
+						<td>{{liv.data_devolucao | date: 'dd/MM/yyyy'}}</td>
+					</tr>
+				</tbody>
+			</table>
 		</div>
 	</ion-content>
 </ion-view>
