--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -9,32 +9,31 @@
   </ion-side-menu-content>
 
   <!-- Left menu -->
-  <ion-side-menu side="left">
-    <ion-content >
+  <ion-side-menu side="left" >
+    <header class="bar bar-header bar-stable">
+      <h1 class="title">Menu</h1>
+    </header>
+    <ion-content class="has-header">
       <ion-list>
         <ion-item menu-close href="#/app/home">
           <i ng-class="{'ion-android-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
+        </ion-item>  
+        <ion-item menu-close>
+           <i class="ion-search"></i>Buscar Bibliotecas
+        </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/busca">
           <i class="ion-android-search"></i> Buscar Livros
         </ion-item>
-        <ion-item menu-close>
-           <i class="ion-search"></i>Buscar Bibliotecas
-        </ion-item>
-        <ion-item menu-close>
-          Guia de Codificação
         </ion-item>
         <ion-item menu-close href="#/app/livrosAlugados">
           <i class="ion-calendar"></i>Livros Alugados
         </ion-item>
         <ion-item menu-close>
-          <i class="ion-android-star-outline"></i> Favoritos
+          Guia de Codificação
         </ion-item>
         <ion-item menu-close>
-          Redes Socias
-        </ion-item>
-        <ion-item menu-close>
-          <i class="ion-help"></i>Ajuda
+          Sobre
         </ion-item>
       </ion-list>
     </ion-content>
