Adição da codificação
- local notification está com problemas, olhar depois
- tela com guia de notificação adicionada
-diversas mudanças de estilo

--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -19,7 +19,7 @@
           <i ng-class="{'ion-android-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
         </ion-item>  
         <ion-item menu-close>
-           <i class="ion-search"></i>Buscar Bibliotecas
+           <i class="ion-search"></i>Bibliotecas
         </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/busca">
@@ -29,7 +29,7 @@
         <ion-item menu-close href="#/app/livrosAlugados">
           <i class="ion-calendar"></i>Livros Alugados
         </ion-item>
-        <ion-item menu-close>
+        <ion-item menu-close href="#/app/codificacao">
           Guia de Codificação
         </ion-item>
         <ion-item menu-close>
