--- a/www/css/style.css
+++ b/www/css/style.css
@@ -9,25 +9,6 @@ body {
     cursor: url('http://ionicframework.com/img/finger.png'), auto;
 }
 
-.tableLivros{
-    font-size: 20px;
-}
-
-.tableLivros table{
-    width: 100%;
-    text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.tableLivros tr, td, th{
-    border: solid 2px grey;
-}
-
-.tableLivros table thead tr th{
-    background-color:lightgrey;
-}
-
 .header .col {
     background-color:lightgrey;
 }
@@ -47,11 +28,58 @@ body {
 }
 
 .aviso {
-    text-align: center;
-    margin-top: 50%;
+	width: 100%;
+	height: 100px;
 }
-.aviso h2 {
-    color: #757575;
-    font-size: 50px;
-    text-shadow: 2px 2px #424242;
+
+.aviso h2{
+	margin-top: 20px;
+	padding-left: 10px;
+	color: #9E9E9E;
+}
+
+table thead{
+	background-color: lightgrey;
+}
+table, th, td{
+	border: solid 1px grey;
+	padding: 3px;
+}
+table tbody tr td{
+	text-align: center;
+}
+
+.codificacao{
+	width: 100%;
+	background-color: #FFD177;
+}
+
+.codificacao .codificacao-img{
+	max-width: 100%;
+	height: auto;
+}
+
+.float-button {
+  border-radius: 50%;
+  width: 30px;
+  padding: 30px;
+  font-size: 40px;
+  background: #1565c0;
+  position: fixed;
+  bottom: 4%; /* Adjust to where you want it */
+  right: 5%; /* Adjust to where you want it */
+  z-index: 9999;
+}
+.float-button .height_fix {
+  margin-top: 100%;
+}
+.float-button .content {
+  position: absolute;
+  left: 0;
+  top: 50%;
+  height: 100%;
+  width: 100%;
+  text-align: center;
+  margin-top: -20px; /* Note, this must be half the font size */
+  color: white;
 }
