--- a/www/view/addLivrosAlugados.html
+++ b/www/view/addLivrosAlugados.html
@@ -1,11 +1,10 @@
 <ion-view view-title="Adicionar Livros">
-	<ion-nav-bar class="bar-royal">
+	<ion-nav-bar class="bar-positive">
 		<ion-nav-back-button class="button-clear">
     		<i class="ion-arrow-left-c"></i> Back
   		</ion-nav-back-button>
 	</ion-nav-bar>
 	<ion-content class="has-header" scroll="false">
-		{{dataAtual}}
 		<form name="addLivroForm" ng-submit="addLivro(livro)">
 			<div class="list">
 			  <label class="item item-input">
