--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -1,5 +1,5 @@
 <ion-view view-title="Busca">
-	<ion-nav-bar class="bar-royal">
+	<ion-nav-bar class="bar-positive">
 		<ion-nav-buttons side="left">
 	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	  	</ion-nav-buttons>
