--- a/www/view/livrosAlugados.html
+++ b/www/view/livrosAlugados.html
@@ -1,19 +1,13 @@
 <ion-view view-title="Livros Alugados">
-	<ion-nav-bar class="bar-royal">
+	<ion-nav-bar class="bar-positive">
 		<ion-nav-buttons side="left">
 	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-	  	</ion-nav-buttons>
-	  	<ion-nav-buttons side="right">
-	  		<a href="#/app/addLivrosAlugados">
-	    		<button class="button button-icon icon ion-plus-round"></button>
-	    	</a>	
 	  	</ion-nav-buttons>
 	</ion-nav-bar>
 	<ion-content class="has-header">
 		<div class="aviso" ng-show="livros.length == 0" scroll="false">
 			<h2>Nenhum livro alugado.</h2>
 		</div>
-
 		<div class="tableLivros" ng-show="livros.length > 0">
 			<table name="tableLivros">
 				<thead>
@@ -33,4 +27,11 @@
 			</table>
 		</div>
 	</ion-content>
+	<div class="float-button">
+		  <span class="height-fix">
+		    <a href="#/app/addLivrosAlugados" class="content">
+		      <i class="ion-plus-round"> </i>
+		    </a>
+		  </span>
+		</div>
 </ion-view>
