--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -16,24 +16,24 @@
     <ion-content class="has-header">
       <ion-list>
         <ion-item menu-close href="#/app/home">
-          <i ng-class="{'ion-android-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
+          <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
         </ion-item>  
         <ion-item menu-close>
-           <i class="ion-search"></i>Bibliotecas
+           <i class="mdi mdi-city"></i>Bibliotecas
         </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/busca">
-          <i class="ion-android-search"></i> Buscar Livros
+          <i class="mdi mdi-book"></i> Buscar Livros
         </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/livrosAlugados">
-          <i class="ion-calendar"></i>Livros Alugados
+          <i class="mdi mdi-clipboard-text"></i>Livros Alugados
         </ion-item>
         <ion-item menu-close href="#/app/codificacao">
-          Guia de Codificação
+          <i class="mdi mdi-file-document"></i>Guia de Codificação
         </ion-item>
         <ion-item menu-close>
-          Sobre
+          <i class="mdi mdi-information"></i>Sobre
         </ion-item>
       </ion-list>
     </ion-content>
