Informação da obra
adicionada a view que da a informação do livro pesquisado na view
'Busca'

--- a/www/view/addLivrosAlugados.html
+++ b/www/view/addLivrosAlugados.html
@@ -20,7 +20,7 @@
 			    <input type="date" ng-model="livro.data_devolucao" min="{{dataAtual | date: 'yyyy-MM-dd'}}" ng-required="true"/>
 			  </label>
 			</div>
-			<button type="submit" class="button button-full button-dark">
+			<button type="submit" class="button button-positive centralizar">
   				Salvar!
 			</button>
 		</form>
