--- a/www/css/style.css
+++ b/www/css/style.css
@@ -61,13 +61,14 @@ table tbody tr td{
 
 .float-button {
   border-radius: 50%;
-  width: 30px;
+  min-width: 42px;
+  max-width: 224px;
   padding: 30px;
   font-size: 40px;
   background: #1565c0;
   position: fixed;
-  bottom: 4%; /* Adjust to where you want it */
-  right: 5%; /* Adjust to where you want it */
+  bottom: 32px; /* Adjust to where you want it */
+  right: 32px; /* Adjust to where you want it */
   z-index: 9999;
 }
 .float-button .height_fix {
@@ -86,4 +87,11 @@ table tbody tr td{
 
 button.button-size-busca:before{
   font-size: 23px !important;
+}
+
+button.centralizar{
+  display: block;
+  width: 120px;
+  margin-left: auto;
+  margin-right: auto;
 }
