--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -18,7 +18,7 @@
         <ion-item menu-close href="#/app/home">
           <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
         </ion-item>  
-        <ion-item menu-close>
+        <ion-item menu-close href="#/app/Bibliotecas">
            <i class="mdi mdi-city"></i>Bibliotecas
         </ion-item>
         </ion-item>
