header height and splash screen

--- a/www/view/addLivrosAlugados.html
+++ b/www/view/addLivrosAlugados.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Adicionar Livros">
 	<ion-nav-bar class="bar-positive">
 		<ion-nav-back-button class="button-clear">
-    		<i class="ion-arrow-left-c"></i> Back
+    		<button class="button button-icon icon ion-arrow-left-c" ng-click="goBack()"></button>
   		</ion-nav-back-button>
 	</ion-nav-bar>
 	<ion-content class="has-header" scroll="false">
