Local ntification, algumas melhorias no design

--- a/www/view/addLivrosAlugados.html
+++ b/www/view/addLivrosAlugados.html
@@ -12,8 +12,8 @@
 			    <input type="text" ng-model="livro.nome_livro" ng-required="true"/>
 			  </label>
 			  <label class="item item-input">
-			    <span class="input-label">Código</span>
-			    <input type="text" ng-model="livro.codigo_livro" ng-required="true"/>
+			    <span class="input-label">Biblioteca</span>
+			    <input type="text" ng-model="livro.biblioteca_livro" ng-required="true"/>
 			  </label>
 			  <label class="item item-input">
 			    <span class="input-label">Data de entrega</span>
