--- a/www/css/style.css
+++ b/www/css/style.css
@@ -95,6 +95,14 @@ button.centralizar{
   margin-left: auto;
   margin-right: auto;
 }
+
+.ion-android-arrow-back{
+	margin-left:3vw;
+	border-style:none;
+}
+.ion-android-arrow-back.ion-loading-c{
+	font-size: 7vw;
+}
 .item-Biblio{
 	color:inherit;
 	text-decoration:none;
@@ -121,5 +129,50 @@ button.centralizar{
 
 .item-Biblio div:active{
 	background-color:#999;
+}
+.pop-up{
+position:absolute;
+height:100vh;
+width:100vw;
+border-style:none;
+}
+.pop-up div#back{
+position:absolute;
+height:100%;
+width:100%;
+background:#000;
+border-style:none;
+opacity:0.4;
+}
+.pop-up div#content{
+position:absolute;
+width:95vw;
+margin-left:2.5vw;
+margin-top:2.5vh;
+background:#FFF;
+border-style:none;
+}
+.pop-up div#content a#close{
+position:absolute;
+left:88vw;
+z-index:1;
+}
+.pop-up div#content div.list a{
+float:left;
+margin-top:0vh;
+margin-right:0vh;
+z-index:1000;
+} 
+#Tel {display:none;}
+#Tels{display:none;}
+#Tel#descrdescr{
+background-color:inherit;
+}
+i.ion-loading-c{
+	font-size: 4vh;
+}
+i.ion-android-cancel.ion-loading-c{
+	color:#387ef7;
+	font-size: 8vw;
 }
 
