--- a/www/view/biblioteca_GPS.html
+++ b/www/view/biblioteca_GPS.html
@@ -1,20 +1,16 @@
 <ion-view view-title="Bibliotecas">
-	<ion-nav-bar class="bar-positive">
-		<ion-nav-buttons side="left">
-	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
-	  	</ion-nav-buttons>
+	<ion-nav-bar align-title="center" class="bar-positive">
+		<ion-nav-back-button class="ion-android-arrow-back ion-loading-c" side="left"><br />
+		</ion-nav-back-button>
 	</ion-nav-bar>
 	<ion-content class="has-header">
-		
-		<div class="item item-input-inset">
+		<div id="form" class="item-input-inset" style="display:none;">
 			<label class="item-input-wrapper">
 				<input type="text" id="route_from" placeholder="Endereço">
 			</label>
-			<input type="button" id="submit" value="Traçar rota" onclick="TracaRota($('#route_from').val(),0);"/>
+			<input type="button" id="submit" value="Traçar rota" onclick="TracaRota($('#route_from').val());"/>
 		</div>
-		
-		
-		<div id ="map_content" data-tap-disabled="true" style="background-color:#999;height:100vh;width:100%">
+		<div id ="map_content" data-tap-disabled="true" style="background-color:#999;height:90vh;width:100%">
 		</div>
 	</ion-content>
 </ion-view>
