Modificações de design

--- a/www/view/addLivrosAlugados.html
+++ b/www/view/addLivrosAlugados.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Adicionar Livros">
-	<ion-nav-bar class="bar-positive">
+	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-back-button class="button-clear">
-    		<button class="button button-icon icon ion-arrow-left-c" ng-click="goBack()"></button>
+    		<button class="button button-icon icon mdi mdi-arrow-left" ng-click="goBack()"></button>
   		</ion-nav-back-button>
 	</ion-nav-bar>
 	<ion-content class="has-header" scroll="false">
