--- a/www/view/biblioteca_exibicao.html
+++ b/www/view/biblioteca_exibicao.html
@@ -1,5 +1,5 @@
 <ion-view  view-title="{{Bibliotecas.sigla}}">
-	<ion-nav-bar align-title="center" class="bar-positive">
+	<ion-nav-bar align-title="center" class="bar-positive bar-azulUFC">
 		<ion-nav-back-button class="ion-android-arrow-back ion-loading-c" side="left"><br />
 		</ion-nav-back-button>
 	</ion-nav-bar>
