--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -1,6 +1,6 @@
 <body>
 	<ion-view view-title="Busca">
-		<ion-nav-bar class="bar-positive">
+		<ion-nav-bar class="bar-positive bar-azulUFC">
 			<ion-nav-buttons side="left">
 		    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 		  	</ion-nav-buttons>
@@ -11,7 +11,7 @@
 		<ion-content class="has-header">
 			<ion-refresher pulling-icon="ion-arrow-down-b" on-refresh="refreshItems()">
     		</ion-refresher>
-    		<div ng-show="busca.length < 3" class="aviso">
+    		<div ng-show="busca.length < 3 || busca.length == 0" class="aviso">
 	        	<h2>Pesquise um livro.</h2>
 	        </div>
 	        <ion-list ng-show="busca.length >= 3">
