--- a/www/view/livrosAlugadosAddLivro.html
+++ b/www/view/livrosAlugadosAddLivro.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Adicionar Livro">
-	<ion-nav-bar class="bar-positive">
+	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-back-button class="button-clear">
-    		<i class="ion-arrow-left-c"></i> Back
+    		<i class="mdi mdi-arrow-left"></i> Back
   		</ion-nav-back-button>
 	</ion-nav-bar>
     <ion-content>
