--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -17,13 +17,12 @@
       <ion-list>
         <ion-item menu-close href="#/app/home">
           <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
+        </ion-item>
+        <ion-item menu-close href="#/app/busca">
+          <i class="mdi mdi-book"></i> Pesquisar Livros
         </ion-item>  
         <ion-item menu-close href="#/app/Bibliotecas">
            <i class="mdi mdi-city"></i>Bibliotecas
-        </ion-item>
-        </ion-item>
-        <ion-item menu-close href="#/app/busca">
-          <i class="mdi mdi-book"></i> Buscar Livros
         </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/livrosAlugados">
