--- a/www/css/style.css
+++ b/www/css/style.css
@@ -51,7 +51,7 @@ table tbody tr td{
 
 .codificacao{
 	width: 100%;
-	background-color: #FFD177;
+	background-color: white;
 }
 
 .codificacao .codificacao-img{
@@ -176,3 +176,37 @@ i.ion-android-cancel.ion-loading-c{
 	font-size: 8vw;
 }
 
+.bloco{
+	margin: 20px 10px;
+	}
+
+.box{
+	margin-top: 20px;
+}
+
+.title{
+	position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    z-index: 0;
+    overflow: hidden;
+    margin: 0 10px;
+    min-width: 30px;
+    height: 43px;
+    text-align: center;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    font-size: 17px;
+    font-weight: 500;
+    line-height: 44px; 
+}
+
+
+.bar.bar-azulUFC, .bar-azulUFC .bar.bar-positive , .bar-azulUFC .nav-bar-block ion-header-bar{
+	/** #2A5DB7; UFC => #004B82*/
+	background-color: #004B82;
+	border-color: #004B82;
+	background-image: linear-gradient(0deg, #004B82, #004B82 50%, transparent 50%);
+    }
+}
