--- a/www/view/home.html
+++ b/www/view/home.html
@@ -1,8 +1,16 @@
 <ion-view view-title="Home">
-	<ion-nav-bar class="bar-positive">
+	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-buttons side="left">
 	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	  	</ion-nav-buttons>
+	  	<ion-nav-buttons side="primary" >
+	  		<a href="#/app/busca">
+      			<button  class="button button-icon icon ion-android-search" ng-click="doSomething()"></button>
+      		</a>
+    	</ion-nav-buttons>
+    	<ion-nav-buttons side="right">
+      		<button  class="button button-icon icon ion-android-notifications-none" ></button>
+    	</ion-nav-buttons>
   	</ion-nav-bar>
 	<ion-content class="has-header">
 		<div class="card">
