--- a/www/view/biblioteca_exibicao.html
+++ b/www/view/biblioteca_exibicao.html
@@ -47,7 +47,7 @@
 
 	<div class="has-header " style="z-index:1;">
 		
-		<img id="img-Biblio-Exibi" src="img/{{Bibliotecas.img}}" style='background-color:#EEE;height:40vh;width:100%'>
+		<img id="img-Biblio-Exibi" src="img/{{Biblioteca.img}}" style='background-color:#EEE;height:40vh;width:100%'>
 		
 		<a class="item-Biblio" ng-href="#/app/Biblioteca_GPS" >
 			<div>
