--- a/www/view/biblioteca_GPS.html
+++ b/www/view/biblioteca_GPS.html
@@ -2,14 +2,22 @@
 	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-back-button class="ion-android-arrow-back ion-loading-c" side="left"></ion-nav-back-button>
 	</ion-nav-bar>
+	<filter-bar-search class="filter-bar" style="height:0;">
+		<div  class="filter-bar-wrapper filter-bar-stable filter-bar-transition-horizontal ">
+		<div class="bar bar-header bar-stable item-input-inset">
+		<button class="filter-bar-cancel button button-icon icon ion-android-arrow-back" onclick="closeMarkers()"></button>
+		<label class="item-input-wrapper">
+		<input data-tap-disabled="true" class="filter-bar-search ng-pristine ng-valid ng-touched" type="text" id="route_from" placeholder='Endereço de origem para ' onkeyup="if (event.keyCode == 13) { TracaRota(); }"/>
+
+		<button class="filter-bar-clear button button-icon icon filter-bar-element-hide" ng-class="getClearButtonClass()" onclick="closeMarkers()"></button></label>
+		</div></div>
+	</filter-bar-search>
 	<ion-content class="has-header">
-		<div id="form" class="item-input-inset" style="display:none;">
-			<label class="item-input-wrapper">
-				<input type="text" id="route_from" placeholder="Endereço" />
-			</label>
-			<input type="button" id="submit" value="Traçar rota" onclick="TracaRota($('#route_from').val());"/>
-		</div>
-		
 		<div id ="map_content" data-tap-disabled="true" style="background-color:#999;height:90vh;width:100%"></div>
 	</ion-content>
 </ion-view>
+
+
+
+
+
