melhorias de design

--- a/www/view/busca.html
+++ b/www/view/busca.html
@@ -1,18 +1,18 @@
 <body>
-	<ion-view view-title="Busca">
+	<ion-view view-title="Pesquisa">
 		<ion-nav-bar class="bar-positive bar-azulUFC">
 			<ion-nav-buttons side="left">
 		    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
 		  	</ion-nav-buttons>
 		  	<ion-nav-buttons side="right">
-		  	      <button class="button button-icon icon ion-android-search button-size-busca" ng-click="showFilterBar()" ng-model="busca"> </button>
+		  	      <button class="button button-icon icon mdi mdi-magnify button-size-busca" ng-click="showFilterBar()" ng-model="busca"> </button>
 		  	</ion-nav-buttons>
 	  	</ion-nav-bar>
 		<ion-content class="has-header">
 			<ion-refresher pulling-icon="ion-arrow-down-b" on-refresh="refreshItems()">
     		</ion-refresher>
-    		<div ng-show="busca.length < 3 || busca.length == 0" class="aviso">
-	        	<h2>Pesquise um livro.</h2>
+    		<div ng-show="busca.length < 3 || busca.length == 0" class="empty-screen">
+	        	<img src="img/livrobusca.png">
 	        </div>
 	        <ion-list ng-show="busca.length >= 3">
 	        	<ion-item ng-repeat="livro in livros | filter: busca" href="#/livroInfo/{{livro.id}}">
