--- a/www/view/home.html
+++ b/www/view/home.html
@@ -5,11 +5,11 @@
 	  	</ion-nav-buttons>
 	  	<ion-nav-buttons side="primary" >
 	  		<a href="#/app/busca/true">
-      			<button  class="button button-icon icon ion-android-search" ng-click="doSomething()"></button>
+      			<button  class="button button-icon icon mdi mdi-magnify button-size-busca" ng-click="doSomething()"></button>
       		</a>
     	</ion-nav-buttons>
     	<ion-nav-buttons side="right">
-      		<button  class="button button-icon icon ion-android-notifications-none" ></button>
+      		<button  class="button button-icon icon mdi mdi-bell-outline button-size-busca" ></button>
     	</ion-nav-buttons>
   	</ion-nav-bar>
 	<ion-content class="has-header">
