--- a/www/view/sideMenu.html
+++ b/www/view/sideMenu.html
@@ -16,23 +16,23 @@
     <ion-content class="has-header">
       <ion-list>
         <ion-item menu-close href="#/app/home">
-          <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i> Home
+          <i ng-class="{'mdi': isAndroid, 'mdi-home': isAndroid, 'ion-ios-home': isIOS}"></i><span class="text-vertical-aligned-menu">Home</span>
         </ion-item>
         <ion-item menu-close href="#/app/busca/false">
-          <i class="mdi mdi-book"></i> Pesquisar Livros
+          <i class="mdi mdi-magnify"></i><span class="text-vertical-aligned-menu">Pesquisar Livros</span>
         </ion-item>  
         <ion-item menu-close href="#/app/Bibliotecas">
-           <i class="mdi mdi-city"></i>Bibliotecas
+           <i class="mdi mdi-city"></i><span class="text-vertical-aligned-menu">Bibliotecas</span>
         </ion-item>
         </ion-item>
         <ion-item menu-close href="#/app/livrosAlugados">
-          <i class="mdi mdi-clipboard-text"></i>Livros Alugados
+          <i class="mdi mdi-clipboard-text"></i><span class="text-vertical-aligned-menu">Livros Alugados</span>
         </ion-item>
         <ion-item menu-close href="#/app/codificacao">
-          <i class="mdi mdi-file-document"></i>Guia de Codificação
+          <i class="mdi mdi-file-document"></i><span class="text-vertical-aligned-menu">Guia de Codificação</span>
         </ion-item>
         <ion-item menu-close>
-          <i class="mdi mdi-information"></i>Sobre
+          <i class="mdi mdi-information"></i><span class="text-vertical-aligned-menu">Sobre</span>
         </ion-item>
       </ion-list>
     </ion-content>
