--- a/www/css/style.css
+++ b/www/css/style.css
@@ -8,7 +8,7 @@
 body {
     cursor: url('http://ionicframework.com/img/finger.png'), auto;
 }
-
+/**
 .header .col {
     background-color:lightgrey;
 }
@@ -26,16 +26,32 @@ body {
 .row:last-child .col {
     border-bottom: solid 1px grey;
 }
+*/
 
-.aviso {
-	width: 100%;
-	height: 100px;
+.color-icon{
+	fill: #999999;
+	color: #999999;
 }
 
-.aviso h2{
-	margin-top: 20px;
-	padding-left: 10px;
-	color: #9E9E9E;
+button.button-size-busca:before{
+  font-size: 23px !important;
+}
+
+.text-vertical-aligned-menu{
+	vertical-align: 10%;
+	margin-left: 20px;
+	color: #222 !important;
+}
+
+.empty-screen {
+	width: 100%;
+}
+
+.empty-screen img{
+	margin-top: -29.5%; /*-105px */
+	/*margin-left: -20px;*/
+	max-width: 100%;
+	height: auto;
 }
 
 .codificacao{
@@ -60,10 +76,6 @@ body {
   background-color: #004B82 !important;
 }
 
-button.button-size-busca:before{
-  font-size: 23px !important;
-}
-
 button.centralizar{
   display: block;
   margin-left: auto;
@@ -76,8 +88,6 @@ button.centralizar{
 .delete{
 	float: right;
 	display: block !important;
-	fill: #999999;
-	color: #999999;
 }
 
 .ion-android-arrow-back{
