--- a/www/view/home.html
+++ b/www/view/home.html
@@ -20,9 +20,11 @@
 					<div id="NomeBiblio" style="padding:1vh;width:72.8%;margin:auto;"><p style="text-align:center;color:#EEE;font-size:4vh;margin:0;">{{Biblioteca.sigla}}</p></div>
 				</div>
 				
+				<a ng-href="#/app/Biblioteca">
 				<div style="width:100%;margin:0;height:35vh;">
 					<img id="imgBiblio" src="img/{{Biblioteca.img}}" style="height:100%;width:100%" />
 				</div>
+				</a>
 				
 				<div id="HoraBiblio" style="padding:0;text-align:center;margin:0;background:#0066A5;padding:0;color:#EEE;font-size:3vh;padding:1vh;height:6vh">
 				<p style="">
