--- a/www/view/bibliotecas.html
+++ b/www/view/bibliotecas.html
@@ -1,23 +1,26 @@
 <ion-view view-title="Bibliotecas">
 	<ion-nav-bar class="bar-positive bar-azulUFC">
 		<ion-nav-buttons side="left">
-	    	<button menu-toggle="left" class="button button-icon icon mdi mdi-menu"></button>
+	    	<button menu-toggle="left" class="button button-icon icon ion-navicon"></button>
 	  	</ion-nav-buttons>
 	</ion-nav-bar>
-	<ion-content align-title="left" class="has-header">
+	<div class="float-button">
+		<a ng-click="TradeId(-1);" href="#/app/Biblioteca_GPS" >
+			<button class="mdl-button mdl-js-button mdl-button--fab mdl-button--colored">
+				<i class="ion-map"></i>
+			</button>
+		</a>
+	</div>
+	
+	<ion-content scroll="true" align-title="left" class="has-header">
 		<div class="aviso" ng-show="Bibliotecas.length == 0" scroll="false">
 			<h2>Não há Bibliotecas...</h2>
 		</div>
 		<ion-list>
-			<a class="item item-thumbnail-left" ng-click="TradeId(-1);" href="#/app/Biblioteca_GPS" >
-			  <h2 id="Todas">Todas as bibliotecas</h2><br /><br />
-			</a>
-			
 			<div  ng-repeat="biblio in Bibliotecas">
-				<a class="item item-thumbnail-left" ng-href="#/app/Biblioteca" ng-click="TradeId({{biblio.id}})" >
+				<a class="item item-thumbnail-left item-text-wrap" style="" ng-href="#/app/Biblioteca" ng-click="TradeId({{biblio.id}})" >
 					<img src="img/{{biblio.img}}">
-					<h2 id="Biblio_{{biblio.id}}" >{{biblio.nome}}</h2><br /><br />
-					<p  >{{biblio.sigla}}</p>
+					<h2 id="Biblio_{{biblio.id}}" >{{biblio.nome}} - {{biblio.sigla}} </h2>
 				</a>
 			</div>
 		</ion-list>
